# credit-scoring-mlops

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: notes.md
scripts/: profile_inference.py  simulate_production_data.py
src/: app.py
tests/: test_api.py
